fix tooltips being behind lines

--- a/static/grid.css
+++ b/static/grid.css
@@ -241,6 +241,7 @@ button:disabled:hover {
 	border-bottom: solid 1px #000;
 	border-top: solid 1px #656475;
 	border-radius: 1px;
+	z-index: 1;
 }
 
 .block p {
